--- a/_data/alumni_team.yml
+++ b/_data/alumni_team.yml
@@ -20,6 +20,12 @@
   twitter: seg1o
   desc: Sean has been working as a professional software engineer since 2006. He has held a variety of product development and consulting roles at startups in spaces that include credit card fraud, business analytics, and customer experience management. More recently he has specialized in writing software that enables people to build high throughput & low latency data streaming platforms. Sean has organized the Scala Toronto meetup since 2013. <a href="https://seanglover.com">seanglover.com</a>
 
+- name: Enno Runne
+  avatar: https://en.gravatar.com/avatar/aa7dc84848a809f47e21f4195ba1a8b2?s=160
+  title: Akka Tech Lead
+  twitter: ennru
+  desc: Enno got introduced to Java in 1996 by Martin Odersky at Karlsruhe Institute of Technology. After his studies and Master's thesis on implementing Java Generics he moved to Sweden for love, and started his IT career building the Swedish national prescription registry and diverse other projects. Enno founded the Scala Stockholm user group in 2010 and is involved in the Jfokus developers' conference.
+
 - name: Christopher Batey
   avatar: https://s.gravatar.com/avatar/4023085794183d616419d2b9409a1f3a?s=160
   twitter: chbatey
