Updated team page.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -30,4 +30,4 @@
 
 - name: Raymond Roestenburg
   avatar: https://avatars.githubusercontent.com/u/156425?v=4&s=160
-  desc: Author of Akka in Action.
+  desc: Ray has been working as a professional software engineer since 1997. He has been a production user, contributor and evangelist of Akka since 2010. He is the author of Akka in Action.
