--- a/.github/workflows/link-validator.yml
+++ b/.github/workflows/link-validator.yml
@@ -4,18 +4,20 @@ on:
   pull_request:
   schedule:
     - cron:  '0 6 * * 1'
+  workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
   validate-links:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          # See https://github.com/actions/checkout/issues/299#issuecomment-677674415
-          ref: ${{ github.event.pull_request.head.sha }}
+        uses: actions/checkout@v3.1.0
 
-      - uses: actions/cache@v2
+      - name: Cache
+        uses: actions/cache@v3.2.0
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
@@ -30,13 +32,13 @@ jobs:
       - name: Build site with Jekyll
         run: bundle exec jekyll build --future
 
+      - name: Cache Coursier cache
+        uses: coursier/cache-action@v6.4.1
+
       - name: Set up JDK 11
-        uses: coursier/setup-action@v1.1.2
+        uses: coursier/setup-action@v1.3.0
         with:
           jvm: adopt:11
 
-      - name: Cache Coursier cache
-        uses: coursier/cache-action@v5
-
       - name: Run Link Validator
-        run: cs launch net.runne::site-link-validator:0.2.2 -- link-validator.conf
+        run: cs launch net.runne::site-link-validator:0.2.3 -- link-validator.conf
