--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,16 +5,20 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+
 jobs:
   publish:
     if: github.repository == 'akka/akka.io'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     environment: publish-to-gustav
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3.1.0
 
-      - uses: actions/cache@v2
+      - name: Cache
+        uses: actions/cache@v3.2.0
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
